--- a/pr12/pr12.ipynb
+++ b/pr12/pr12.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2c5e287b",
+   "metadata": {},
+   "source": [
+    "# Практическая работа №12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b3403f2",
    "metadata": {},
    "source": [
-    "# Обыкновенные дифференциальные уравнения"
+    "## Обыкновенные дифференциальные уравнения"
    ]
   },
   {
@@ -15,14 +23,6 @@
    "source": [
     "#### Найти первую и вторую производные, а таже построить график функции, первой и второй ее производных для cos(x), sin(x), tg(x), ctg(x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f95a54d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -98,7 +98,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
